cmake_minimum_required(VERSION 3.16)


add_subdirectory(operating_system-posix/nano_account_posix)
#add_subdirectory(operating_system-posix/nano_dynamic_library_dl)
add_subdirectory(operating_system-posix/nano_dynamic_library_dl_null)


add_subdirectory(operating_system-posix/nano_http_command_line)

add_subdirectory(operating_system-posix/nano_compress_command_line)


add_subdirectory(operating_system-posix/acme_posix)
add_subdirectory(operating_system-darwin/acme_darwin)
add_subdirectory(operating_system-apple/acme_apple)
add_subdirectory(operating_system-macos/acme_macos)

add_subdirectory(operating_system-posix/apex_posix)
add_subdirectory(operating_system-darwin/apex_darwin)
add_subdirectory(operating_system-apple/apex_apple)
add_subdirectory(operating_system-macos/apex_macos)

#if(${HAS_GTK4})
#
#elseif(${HAS_GTK3})
#    add_subdirectory(operating_system-posix/common_gtk)
#    add_subdirectory(operating_system-posix/acme_windowing_gtk3)
#elseif(${HAS_KDE6})
#    add_subdirectory(operating_system-posix/acme_windowing_kde6)
#elseif(${HAS_KDE5})
#    add_subdirectory(operating_system-posix/acme_windowing_kde5)
#endif()

if(${DESKTOP_AMBIENT})
   # DESKTOP_AMBIENT are dependant just on linux kernel version and glib version?

   message(STATUS "operating_system/CMakeLists.txt DESKTOP_AMBIENT is set")

   add_subdirectory(operating_system-posix/aura_posix)
   add_subdirectory(operating_system-darwin/aura_darwin)
   add_subdirectory(operating_system-apple/aura_apple)
   add_subdirectory(operating_system-macos/aura_macos)
   add_subdirectory(operating_system-macos/windowing_macos)
   add_subdirectory(operating_system-macos/node_macos)
   # if(${LXDE_DESKTOP})
   #     message(STATUS "operating_system/CMakeLists.txt LXDE_DESKTOP")
   #     add_subdirectory(operating_system-posix/windowing_x11)
   #     add_subdirectory(operating_system-posix/node_gdk)
   #     add_subdirectory(operating_system-posix/node_gtk3)
   #     add_subdirectory(operating_system-posix/node_gnome)
   #     add_subdirectory(operating_system-linux/desktop_environment_gnome)
   # endif()
   #if(XFCE_DESKTOP)
   #    add_subdirectory(operating_system-posix/windowing_x11)
   #    add_subdirectory(operating_system-posix/node_gdk)
   #    add_subdirectory(operating_system-posix/node_gtk3)
   #    add_subdirectory(operating_system-posix/node_xfce)
   #    add_subdirectory(operating_system-linux/desktop_environment_xfce)
   #endif()
   if(${GTK_BASED_DESKTOP})
      #add_subdirectory(operating_system-posix/windowing_x11)
      #add_subdirectory(operating_system-posix/node_gdk)
      add_subdirectory(operating_system-posix/gnome_library)
      add_subdirectory(operating_system-posix/acme_windowing_g)
      if(${HAS_WAYLAND})
         add_subdirectory(operating_system-posix/windowing_wayland)
      endif()
      if(${HAS_GTK4})
         #3add_subdirectory(operating_system-posix/windowing_system_gtk4)
         add_subdirectory(operating_system-posix/acme_windowing_gtk4)
         add_subdirectory(operating_system-posix/innate_ui_gtk4)
         add_subdirectory(operating_system-posix/windowing_gtk4)
         add_subdirectory(operating_system-posix/node_gtk4)
         add_subdirectory(operating_system-linux/operating_ambient_gtk4)
      elseif(${HAS_GTK3})
         #add_subdirectory(operating_system-posix/windowing_system_gtk3)
         add_subdirectory(operating_system-posix/acme_windowing_gtk3)
         add_subdirectory(operating_system-posix/innate_ui_gtk3)
         add_subdirectory(operating_system-posix/windowing_gtk3)
         add_subdirectory(operating_system-posix/node_gtk3)
         add_subdirectory(operating_system-linux/operating_ambient_gtk3)
      endif()
      add_subdirectory(operating_system-posix/node_gtk_based)
   elseif(${KDE_DESKTOP})
      add_subdirectory(operating_system-posix/acme_windowing_q)
      add_subdirectory(operating_system-posix/innate_ui_q)
      add_subdirectory(operating_system-posix/windowing_q)
      add_subdirectory(operating_system-posix/node_q)
      if(${HAS_KDE6})
         #3add_subdirectory(operating_system-posix/windowing_system_gtk4)
         add_subdirectory(operating_system-posix/acme_windowing_q6)
         add_subdirectory(operating_system-posix/innate_ui_q6)
         add_subdirectory(operating_system-posix/windowing_q6)
         add_subdirectory(operating_system-posix/acme_windowing_kde6)
         add_subdirectory(operating_system-posix/innate_ui_kde6)
         add_subdirectory(operating_system-posix/windowing_kde6)
         add_subdirectory(operating_system-posix/node_kde6)
         add_subdirectory(operating_system-linux/operating_ambient_kde6)

      elseif(${HAS_KDE5})
         #3add_subdirectory(operating_system-posix/windowing_system_gtk4)
         add_subdirectory(operating_system-posix/acme_windowing_q5)
         add_subdirectory(operating_system-posix/innate_ui_q5)
         add_subdirectory(operating_system-posix/windowing_q5)
         add_subdirectory(operating_system-posix/acme_windowing_kde5)
         add_subdirectory(operating_system-posix/innate_ui_kde5)
         add_subdirectory(operating_system-posix/windowing_kde5)
         add_subdirectory(operating_system-posix/node_kde5)
         add_subdirectory(operating_system-linux/operating_ambient_kde5)

      endif()
   elseif(${LXQT_DESKTOP})
      add_subdirectory(operating_system-posix/acme_windowing_q)
      add_subdirectory(operating_system-posix/innate_ui_q)
      add_subdirectory(operating_system-posix/windowing_q)
      add_subdirectory(operating_system-posix/node_q)
      #add_subdirectory(operating_system-posix/common_kde)
      if(${HAS_LXQ2})
         #3add_subdirectory(operating_system-posix/windowing_system_gtk4)
         add_subdirectory(operating_system-posix/acme_windowing_q6)
         add_subdirectory(operating_system-posix/innate_ui_q6)
         add_subdirectory(operating_system-posix/windowing_q6)
         add_subdirectory(operating_system-posix/acme_windowing_lxq2)
         add_subdirectory(operating_system-posix/innate_ui_lxq2)
         add_subdirectory(operating_system-posix/windowing_lxq2)
         add_subdirectory(operating_system-posix/node_lxq2)
         add_subdirectory(operating_system-linux/operating_ambient_lxq2)

      elseif(${HAS_LXQ1})
         add_subdirectory(operating_system-posix/acme_windowing_q5)
         add_subdirectory(operating_system-posix/innate_ui_q5)
         add_subdirectory(operating_system-posix/windowing_q5)
         add_subdirectory(operating_system-posix/acme_windowing_lxq1)
         add_subdirectory(operating_system-posix/innate_ui_lxq1)
         add_subdirectory(operating_system-posix/windowing_lxq1)
         add_subdirectory(operating_system-posix/node_lxq1)
         add_subdirectory(operating_system-linux/operating_ambient_lxq1)

      endif()
   endif()

   if(XFCE_DESKTOP)
      #    add_subdirectory(operating_system-posix/windowing_x11)
      #    add_subdirectory(operating_system-posix/node_gdk)
      #    add_subdirectory(operating_system-posix/node_gtk3)
      #add_subdirectory(operating_system-posix/node_xfce)
      #add_subdirectory(operating_system-linux/operating_ambient_gtk_based)
      #add_subdirectory(operating_system-linux/desktop_environment_xfce)
   endif()
   #if(${KDE_DESKTOP})
   #    add_subdirectory(operating_system-posix/windowing_x11)
   #    add_subdirectory(operating_system-posix/windowing_xcb)
   #    if(${HAS_WAYLAND})
   #        add_subdirectory(operating_system-posix/windowing_wayland)
   #    endif()
   #    if(${HAS_KDE6})
   #    add_subdirectory(operating_system-posix/node_kde6)
   #    elseif(${HAS_KDE5})
   #        add_subdirectory(operating_system-posix/windowing_system_kde5)
   #        add_subdirectory(operating_system-posix/innate_ui_kde5)
   #        add_subdirectory(operating_system-posix/windowing_kde5)
   #        add_subdirectory(operating_system-posix/node_kde5)
   #    endif()
   #    add_subdirectory(operating_system-linux/desktop_environment_kde)
   #endif()


   add_subdirectory(operating_system-posix/write_text_pango)
   add_subdirectory(operating_system-apple/audio_core_audio)
   #add_subdirectory(operating_system-posix/audio_sndio)
   if(${HAS_WAYLAND})
      add_subdirectory(operating_system-posix/input_libinput)
   endif()
   if(${HAS_X11})
      #add_subdirectory(operating_system-posix/input_xinput)
   endif()
   if(${HAS_AUDIO_SYSTEM})
      #add_subdirectory(operating_system-linux/audio_mixer_alsa)
   endif()
   if(${HAS_APP_VERIWELL})
      add_subdirectory(operating_system-posix/music_midi_alsa)
   endif()

   add_subdirectory(operating_system-posix/nano_http_libcurl)


   add_subdirectory(operating_system-posix/nano_graphics_cairo)


   #add_subdirectory(operating_system-posix/windowing_system_x11)
   add_subdirectory(operating_system-posix/acme_windowing_x11)

   #add_subdirectory(operating_system-posix/windowing_system_xcb)
   add_subdirectory(operating_system-posix/acme_windowing_xcb)

   if(${HAS_WAYLAND})

      #add_subdirectory(operating_system-posix/windowing_system_wayland)
      add_subdirectory(operating_system-posix/acme_windowing_wayland)

   endif()


endif()


add_subdirectory(operating_system-posix/innate_ui_motif)
add_subdirectory(operating_system-posix/windowing_x11)
add_subdirectory(operating_system-posix/node_x11)
add_subdirectory(operating_system-macos/operating_ambient_macos)